--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,23 @@
-body{
-    background-color: rebeccapurple;
+* {
+    padding: 0;
+    margin: 0;
+}
+header{
+    background-color: chocolate;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100px;
+}
+nav{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 25px;
+}
+
+button{
+    width: 135px;
+    height: 50px;
 }
