style: content element

--- a/src/style.css
+++ b/src/style.css
@@ -2,6 +2,7 @@
     padding: 0;
     margin: 0;
 }
+
 header{
     background-color: chocolate;
 
@@ -20,4 +21,15 @@ nav{
 button{
     width: 135px;
     height: 50px;
+}
+
+#content{
+    border: 1px solid royalblue;
+    box-sizing: border-box;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 850px;
+    margin: 0 auto;
 }
